erDiagram
  users ||--o| user_notification_preferences : "has"
  users ||--o{ stamp_cards : "owns"
  users ||--o{ gift_cards : "owns"
  users ||--o{ stamp_card_events : "logs"
  users ||--o{ gift_card_events : "logs"
  users ||--o{ notifications : "receives"
  businesses ||--o{ locations : "has"
  businesses ||--o{ stamp_cards : "linked to"
  businesses ||--o{ gift_cards : "linked to"
  locations ||--o{ stamp_card_events : "optional"
  locations ||--o{ gift_card_events : "optional"
  locations ||--o{ notifications : "triggered by"
  stamp_cards ||--o{ stamp_card_events : "logged in"
  stamp_cards ||--o{ notifications : "triggers"
  gift_cards ||--o{ gift_card_events : "logged in"
  gift_cards ||--o{ notifications : "triggers"

  users {
    uuid id PK
    text display_name
    text email
    text auth_provider_id
    text timezone
    timestamp created_at
    timestamp updated_at
    boolean deleted
    timestamp deleted_at
  }
  user_notification_preferences {
    uuid id PK
    uuid user_id FK
    boolean notifications_enabled
    time quiet_hours_start
    time quiet_hours_end
    text[] notify_window_days
    time general_notification_window_start
    time general_notification_window_end
    int daily_notification_cap
    int daily_notification_counter
    timestamp last_notified_date
    timestamp created_at
    timestamp updated_at
  }
  businesses {
    uuid id PK
    text name
    text type
    boolean deleted
    timestamp deleted_at
    timestamp created_at
    timestamp updated_at
  }
  locations {
    uuid id PK
    uuid business_id FK
    text address
    float lat
    float lng
    float geofence_radius
    boolean deleted
    timestamp deleted_at
    timestamp created_at
    timestamp updated_at
  }
  stamp_cards {
    uuid id PK
    uuid user_id FK
    uuid business_id FK
    text nickname
    text notes
    int stamps_needed
    text status
    text[] notify_window_days
    time notify_window_start_time
    time notify_window_end_time
    timestamp notification_time_sent
    int notification_cooldown_seconds
    timestamp expiration_date
    boolean deleted
    timestamp deleted_at
    timestamp created_at
    timestamp updated_at
  }
  stamp_card_events {
    uuid id PK
    uuid stamp_card_id FK
    uuid user_id FK
    uuid location_id FK
    uuid request_id
    text type
    int quantity
    timestamp created_at
  }
  gift_cards {
    uuid id PK
    uuid user_id FK
    uuid business_id FK
    text nickname
    text notes
    text currency
    text status
    text[] notify_window_days
    time notify_window_start_time
    time notify_window_end_time
    timestamp notification_time_sent
    int notification_cooldown_seconds
    timestamp expiration_date
    boolean deleted
    timestamp deleted_at
    timestamp created_at
    timestamp updated_at
  }
  gift_card_events {
    uuid id PK
    uuid gift_card_id FK
    uuid user_id FK
    uuid location_id FK
    uuid request_id
    text type
    numeric amount
    timestamp created_at
  }
  notifications {
    uuid id PK
    uuid user_id FK
    uuid stamp_card_id FK
    uuid gift_card_id FK
    uuid location_id FK
    text type
    text status
    timestamp sent_at
    text subject
    text body
    timestamp created_at
    timestamp updated_at
  }